# tic_tac_toe

./: Cargo.toml  README.md
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js
client/src/pages/Home/: index.js
client/src/pages/Match/: index.js
src/: main.rs  model.rs
src/actors/: mod.rs  server.rs  ws.rs
