[package]
name = "tic_tac_toe"
version = "0.1.0"
authors = ["AKhegay <akhegay@beeline.kg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
serde_derive = "1.0.79"
serde_json = "1.0"
serde = "1.0"
chrono ={ version = "0.4.10", features = ["serde"]}
uuid = { version = "0.6.5", features = ["serde", "v4"] }
names = "0.10.0"